--- a/dvc.yaml
+++ b/dvc.yaml
@@ -27,3 +27,29 @@ stages:
     - src/evaluate_models.py
     metrics:
     - metrics/eval.json
+  augment_data:
+    cmd: python src/augment_data.py data/augmented_only_train.csv
+    deps:
+    - data/sampled_train.csv
+    - src/augment_data.py
+    outs:
+    - data/augmented_only_train.csv
+  train_models_aug:
+    cmd: python src/train_models.py data/augmented_only_train.csv models_aug
+    deps:
+    - data/augmented_only_train.csv
+    - src/train_models.py
+    params:
+    - logistic_regression
+    - naive_bayes
+    - random_forest
+    outs:
+    - models_aug
+  evaluate_models_aug:
+    cmd: python src/evaluate_models.py metrics/eval_aug.json models_aug
+    deps:
+    - data/raw/fashion-mnist_test.csv
+    - models_aug
+    - src/evaluate_models.py
+    metrics:
+    - metrics/eval_aug.json
