--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,32 +1,4 @@
 stages:
-  sample_data:
-    cmd: python src/sample_data.py data/sampled_train.csv
-    deps:
-    - data/raw/fashion-mnist_train.csv
-    - src/sample_data.py
-    params:
-    - sample_size
-    outs:
-    - data/sampled_train.csv
-  train_models:
-    cmd: python src/train_models.py data/sampled_train.csv
-    deps:
-    - data/sampled_train.csv
-    - src/train_models.py
-    params:
-    - logistic_regression
-    - naive_bayes
-    - random_forest
-    outs:
-    - models
-  evaluate_models:
-    cmd: python src/evaluate_models.py metrics/eval.json
-    deps:
-    - data/raw/fashion-mnist_test.csv
-    - models
-    - src/evaluate_models.py
-    metrics:
-    - metrics/eval.json
   train_models_aug:
     cmd: python src/train_models.py data/augmented_only_train.csv models_aug
     deps:
@@ -53,3 +25,32 @@ stages:
     - src/augment_data.py
     outs:
     - data/augmented_only_train.csv
+  sample_data:
+    cmd: python src/sample_data.py data/combined_train.csv
+    deps:
+    - data/augmented_only_train.csv
+    - data/raw/fashion-mnist_train.csv
+    - src/sample_data.py
+    params:
+    - sample_size
+    outs:
+    - data/combined_train.csv
+  train_models:
+    cmd: python src/train_models.py data/combined_train.csv models
+    deps:
+    - data/combined_train.csv
+    - src/train_models.py
+    params:
+    - logistic_regression
+    - naive_bayes
+    - random_forest
+    outs:
+    - models
+  evaluate_models:
+    cmd: python src/evaluate_models.py metrics/eval.json models
+    deps:
+    - data/raw/fashion-mnist_test.csv
+    - models
+    - src/evaluate_models.py
+    metrics:
+    - metrics/eval.json
